--- a/src/app/shared/login/login.component.scss
+++ b/src/app/shared/login/login.component.scss
@@ -61,6 +61,7 @@
     opacity: 1;
     background: $logmod-bg;
     z-index: $logmod-zindex;
+    overflow-y: auto;
     @include clearfix();
 
     // .logmod__wrapper
@@ -248,11 +249,14 @@
       font-size: 14px;
       @include clearfix;
 
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
       .sumbit {
         height: $logmod-baseline * 2;
-        float: right;
+        //float: right;
         color: #FFF;
-        width: 50%;
+        //width: 47%;
         font-weight: 700;
         font-size: 16px;
         background: $green;
@@ -264,8 +268,8 @@
       // .simform__actions-sidetext
       &-sidetext {
         display: inline-block;
-        float: left;
-        width: 50%;
+        //float: left;
+        width: 47%;
         padding: 0 10px;
         margin: 9px 0 0 0;
         color: #8C979E;
