--- a/src/app/shared/producto/producto.component.scss
+++ b/src/app/shared/producto/producto.component.scss
@@ -28,15 +28,16 @@
   }
 
   .fa-shopping-cart{
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    color: white;
-    padding: 3px 4px 3px 4px;
-    border: 2px solid white;
+    //position: absolute;
+    //top: 10px;
+    //left: 10px;
+    //color: white;
+    //padding: 3px 4px 3px 4px;
+    //border: 2px solid white;
     @include shadow(2, black);
-    border-radius: 20px;
-    background-color: #8ed758;
+    //border-radius: 20px;
+    //background-color: #8ed758;
+    color: #8ed758;
 
   }
 }
